syntax = "proto3";

package com.google.startupos.tools.reviewer.job.sync;

option java_package = "com.google.startupos.tools.reviewer.job.sync";
option java_outer_classname = "GithubProtos";

import "tools/reviewer/job/sync/full_github_pr.proto";

// https://developer.github.com/v3/pulls/#get-a-single-pull-request
message PullRequestRequest {
  string owner = 1;
  string repo = 2;
  int64 number = 3;
}

message PullRequestResponse { PullRequest pull_request = 1; }

// https://developer.github.com/v3/pulls/#create-a-pull-request
message CreatePullRequestRequest {
  string owner = 1;
  string repo = 2;
  CreatePullRequestRequestData request_data = 3;

  message CreatePullRequestRequestData {
    string title = 1;
    string head = 2;
    string base = 3;
    string body = 4;
  }
}

message CreatePullRequestResponse { PullRequest pull_request = 1; }

// https://developer.github.com/v3/issues/comments/#list-comments-on-an-issue
message IssueCommentsRequest {
  string owner = 1;
  string repo = 2;
  int64 number = 3;
}

message IssueCommentsResponse { repeated IssueComment issue_comment = 1; }

// https://developer.github.com/v3/issues/comments/#create-a-comment
message CreateIssueCommentRequest {
  string owner = 1;
  string repo = 2;
  int64 number = 3;
  CreateIssueCommentRequestData request_data = 4;

  message CreateIssueCommentRequestData { string body = 1; }
}

message CreateIssueCommentResponse { IssueComment issue_comment = 1; }

// https://developer.github.com/v3/issues/comments/#edit-a-comment
message EditIssueCommentRequest {
  string owner = 1;
  string repo = 2;
  int64 comment_id = 3;
  EditIssueCommentRequestData request_data = 4;

  message EditIssueCommentRequestData { string body = 1; }
}

// https://developer.github.com/v3/issues/comments/#delete-a-comment
message DeleteIssueCommentRequest {
  string owner = 1;
  string repo = 2;
  int64 comment_id = 3;
}

// https://developer.github.com/v3/pulls/comments/#create-a-comment
message CreateReviewCommentRequest {
  string owner = 1;
  string repo = 2;
  int64 number = 3;
  CreateReviewCommentRequestData request_data = 4;

  message CreateReviewCommentRequestData {
    string body = 1;
    string commit_id = 2;
    string path = 3;
    int32 position = 4;
  }
}

message CreateReviewCommentResponse { ReviewComment review_comment = 1; }

// https://developer.github.com/v3/pulls/comments/#edit-a-comment
message EditReviewCommentRequest {
  string owner = 1;
  string repo = 2;
  int64 comment_id = 3;
  EditReviewCommentRequestData request_data = 4;

  message EditReviewCommentRequestData { string body = 1; }
}

// https://developer.github.com/v3/pulls/comments/#delete-a-comment
message DeleteReviewCommentRequest {
  string owner = 1;
  string repo = 2;
  int64 comment_id = 3;
}

// https://developer.github.com/v3/pulls/comments/#list-comments-on-a-pull-request
message PullRequestCommentsRequest {
  string owner = 1;
  string repo = 2;
  int64 number = 3;
}

message PullRequestCommentsResponse {
  repeated ReviewComment review_comment = 1;
}

// https://developer.github.com/v3/repos/commits/#get-a-single-commit
message CommitRequest {
  string owner = 1;
  string repo = 2;
  string sha = 3;
}

message CommitResponse { CommitInfo commit = 1; }

// https://developer.github.com/v3/pulls/#list-commits-on-a-pull-request
message CommitsRequest {
  string owner = 1;
  string repo = 2;
  int64 number = 3;
}

message CommitsResponse { repeated CommitInfo commits = 1; }
